# JIMP2

lab12/academiasequentialgenerator/: CMakeLists.txt.txt  SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: CMakeLists.txt  TeacherHash.cpp  TeacherHash.h
lab12/timerecorder/: CMakeLists.txt.txt  main.cpp  timerecorder.cpp  timerecorder.h
lab3/smarttree/: CMakeLists.txt  SmartTree.cpp  SmartTree.h
lab3/tinyurl/: CMakeLists.txt  TinyUrl.cpp  TinyUrl.h  main.cpp
lab4/netsjson/: CMakeLists.txt  SimpleJson.cpp  SimpleJson.h
lab4/netstemplateengine/: SimpleTemplateEngine.cpp  SimpleTemplateEngine.h
